# datafusion-sql-udfs

./: Cargo.toml  README.md  udfs.json  udfs.sql  write.py
src/: main.rs  sql_udf.rs
